I am still working on it.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li class="nav-list"><a href="#" class="active_navigations">home</a></li>
                 <li class="nav-list"><a href="#" class="site_navigations">about</a></li>
                 <li class="nav-list"><a href="#" class="site_navigations">Services</a></li>
-                <li class="nav-list"><a href="#" class="site_navigations">Contact</a></li>
+                <li class="nav-list"><a href="./contact.html" class="site_navigations">Contact</a></li>
             </ul>
 
             <!-- MY SOCIAL HANDLES -->
@@ -78,7 +78,7 @@
                             <li class="list"><a href="#" class="slide_active_navigations">home</a></li>
                             <li class="list"><a href="#" class="slide_navigations">about</a></li>
                             <li class="list"><a href="#" class="slide_navigations">Services</a></li>
-                            <li class="list"><a href="#" class="slide_navigations">Contact</a></li>
+                            <li class="list"><a href="./contact.html" class="slide_navigations">Contact</a></li>
                         </ul>
 
                         <!-- MY SOCIAL HANDLES -->
@@ -375,18 +375,18 @@
     </section>
 
     <!-- / THE SECOND WRAPPER ENDS HERE -->
-             <!-- THIS IS THE SECOND WAVE HERE IT BEGINS -->
-             <div class="thesvgparent">
-                <div class="custom-shape-divider-bottom-1651923262 customated">
-                    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-                        preserveAspectRatio="none">
-                        <path
-                            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                            class="shape-fill"></path>
-                    </svg>
-                </div>
-            </div>
-            <!-- /THIS IS THE SECOND WAVE HERE IT ENDS -->
+    <!-- THIS IS THE SECOND WAVE HERE IT BEGINS -->
+    <div class="thesvgparent">
+        <div class="custom-shape-divider-bottom-1651923262 customated">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
+            </svg>
+        </div>
+    </div>
+    <!-- /THIS IS THE SECOND WAVE HERE IT ENDS -->
     <!-- THE THIRD WRAPPER STARTS HERE -->
 
     <!-- THE LINE OF PROJECTS BEGIN HERE -->
@@ -474,11 +474,14 @@
     <!-- /THE LINES OF PROJECT ENDS HERE -->
 
     <!-- /THE THIRD WRAPPER ENDS HERE -->
-                <!-- THIS IS THE SECOND WAVE HERE IT BEGINS -->
+    <!-- THIS IS THE SECOND WAVE HERE IT BEGINS -->
     <div class="thesvgparent">
         <div class="custom-shape-divider-top-1655133939">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
             </svg>
         </div>
     </div>
@@ -503,7 +506,8 @@
                         <div class="clientheaders">
                             <h4 class="name">Ugochukwu Nnaji</h4>
                             <h4 class="cpo">
-                                <a href="https://www.itonexglobal.com" class="cp smaller" target="blank"> Itonex global ltd
+                                <a href="https://www.itonexglobal.com" class="cp smaller" target="blank"> Itonex global
+                                    ltd
                                     (C.E.O)</a>
                             </h4>
                         </div>
@@ -587,18 +591,18 @@
 
         </div>
 
-                <!-- THE ANIMATED BORDER  -->
+        <!-- THE ANIMATED BORDER  -->
 
-                <a href="#4wrap" class="theborder animeborder">
-                    <div class="animatedborder">
-                        <span class="animatedspan"></span>
-                    </div>
-                </a>
+        <a href="#ft" class="theborder animeborder">
+            <div class="animatedborder">
+                <span class="animatedspan"></span>
+            </div>
+        </a>
 
     </section>
-     <!--/ THE FOURTH WRAPPER -->
+    <!--/ THE FOURTH WRAPPER -->
 
-         <!-- THIS IS THE SECOND WAVE HERE IT BEGINS -->
+    <!-- THIS IS THE SECOND WAVE HERE IT BEGINS -->
     <div class="thesvgparent">
         <div class="custom-shape-divider-bottom-1651923262">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
@@ -610,6 +614,65 @@
         </div>
     </div>
     <!-- /THIS IS THE SECOND WAVE HERE IT ENDS -->
+
+    <!-- THE FOOTER WRAPPER OR THE LAST WRAPPER BEGINS HERE -->
+    <section class="lastwrapper" id="ft">
+
+        <div class="myservicesheaders">
+            <h3 class="static-txt">get in touch</h3>
+            <h3 class="aboutme lastAbout">contact me</h3>
+        </div>
+
+        <!-- THE FOOTER -->
+
+        <footer class="theFooter">
+
+            <!-- THE CONTACT BOX AND FORM WRAPPER -->
+
+            <div class="contactForm">
+
+                <!-- THE FORM -->
+
+                <form id="contactform" action="https://formsubmit.io/send/lyon4197@gmail.com" method="POST"
+                    class="formflex">
+                    <!-- <h3 class="aboutme lastAbout drop">Drop me a message</h3> -->
+                    <div class="projects">
+
+                        <div class="inputBox">
+                            <input type="email" required="required">
+                            <span>Your Email</span>
+                        </div>
+
+                        <div class="inputBox">
+                            <input type="text" required="required">
+                            <span>Your message</span>
+                        </div>
+                    </div>
+
+                    <div class="button">
+                        <button class="btn lastbtn" type="submit">
+                            <a href="./about.html" class="readmore lastreadmore">send</a>
+                        </button>
+                    </div>
+                </form>
+
+                <!-- THE CONTACT BOX -->
+                <div class="contact_box">
+                    <div class="bchild"><span class="fa-solid fa-location-dot lasti last"></span>
+                        <p>Plot 51 Agu-Awka(Think Home Private Estate), Awka, Anambra.</p>
+                    </div>
+                    <div class="bchild"><span class="fa-solid fa-phone lasti"></span>
+                        <p>+234-902-239-8734</p>
+                    </div>
+                    <div class="bchild"><span class="fa-solid fa-mail-bulk lasti"></span>
+                        <p>lyon4197@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </section>
+    <!-- ENDS -->
+    <!-- /THE FOOTER WRAPPER OR THE LAST WRAPPER ENDS HERE -->
 </body>
 
 </html>
