I am still working on it.

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOMTOCHUKWU | CONTACT</title>
+    <title>SOMTOCHUKWU | PORTFOLIO</title>
     <link rel="icon" href="./assets/images/letter-s-.png">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/fonts/fontawesome/css/all.css">
@@ -33,9 +33,9 @@
 
             <ul class="nav_links">
                 <li class="nav-list"><a href="./index.html" class="site_navigations">home</a></li>
-                <li class="nav-list"><a href="#" class="site_navigations">about</a></li>
+                <li class="nav-list"><a href="#" class="active_navigations">about</a></li>
                 <li class="nav-list"><a href="#" class="site_navigations">Services</a></li>
-                <li class="nav-list"><a href="#" class="active_navigations">Contact</a></li>
+                <li class="nav-list"><a href="#ft" class="site_navigations">Contact</a></li>
             </ul>
 
             <!-- MY SOCIAL HANDLES -->
@@ -76,9 +76,9 @@
 
                         <ul class="slide_links">
                             <li class="list"><a href="./index.html" class="slide_navigations">home</a></li>
-                            <li class="list"><a href="#" class="slide_navigations">about</a></li>
+                            <li class="list"><a href="#" class="slide_active_navigations">about</a></li>
                             <li class="list"><a href="#" class="slide_navigations">Services</a></li>
-                            <li class="list"><a href="#" class="slide_active_navigations">Contact</a></li>
+                            <li class="list"><a href="./contact.html" class="slide_navigations">Contact</a></li>
                         </ul>
 
                         <!-- MY SOCIAL HANDLES -->
@@ -139,7 +139,7 @@
                         <!-- STATIC TEXT -->
 
                         <h1 class="static-txt">
-                            hello&comma; i&apos;m a
+                            get to know me
                         </h1>
 
                         <!-- DYNAMIC TEXT -->
@@ -153,7 +153,7 @@
                     <!-- JUST ME -->
 
                     <div class="justme para">
-                        <p>Hi i'm Somtochukwu Nnaji, a passionate fullstack Developer based in Awka, Nigeria. <span
+                        <p>Hi i'm Somtochukwu Nnaji, a passionate Fullstack Developer based in Awka, Nigeria. <span
                                 class="tbdnone">Welcome to
                                 my
                                 portfolio. I am certainly that which you seek.</span></p>
@@ -195,8 +195,170 @@
             </svg>
         </div>
     </div>
-
     <!--/ THIS IS THE WAVE HERE IT ENDS HERE-->
+
+    <!-- THE SECOND WRAPPER BEGINS HERE -->
+    <section class="secondwrapper" id="down">
+        <div class="aboutmepagesecondwrapper">
+            <div class="champion">
+                <h2 class="championheader">experience</h2>
+
+                <div class="championship">
+                    <div class="championheadersibling">
+                        <div>
+                            <h3 class="chhsh">Itonex global l.t.d</h3>
+                            <p>Anambra, Nigeria. | February 2018 to present</p>
+                        </div>
+                        <p class="ch2">
+                            Fullstack Developer
+                        </p>
+                    </div>
+
+
+                    <div class="championheadersibling">
+                        <div>
+                            <h3 class="chhsh">Osmaxin Developers</h3>
+                            <p>Anambra, Nigeria. | February 2018 to present</p>
+                        </div>
+                        <p class="ch2">
+                            Fullstack Developer
+                        </p>
+                    </div>
+
+
+                    <div class="championheadersibling">
+                        <div>
+                            <h3 class="chhsh">Remote jobs</h3>
+                            <p>Anambra, Nigeria. | February 2018 to present</p>
+                        </div>
+                        <p class="ch2">
+                            Fullstack Developer
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="champion">
+                <h2 class="championheader">experience</h2>
+
+                <div class="championship">
+                    <div class="championheadersibling">
+                        <div>
+                            <h3 class="chhsh">Itonex global l.t.d</h3>
+                            <p>Anambra, Nigeria. | February 2018 to present</p>
+                        </div>
+                        <p class="ch2">
+                            Fullstack Developer
+                        </p>
+                    </div>
+
+
+                    <div class="championheadersibling">
+                        <div>
+                            <h3 class="chhsh">Osmaxin Developers</h3>
+                            <p>Anambra, Nigeria. | February 2018 to present</p>
+                        </div>
+                        <p class="ch2">
+                            Fullstack Developer
+                        </p>
+                    </div>
+
+
+                    <div class="championheadersibling">
+                        <div>
+                            <h3 class="chhsh">Remote jobs</h3>
+                            <p>Anambra, Nigeria. | February 2018 to present</p>
+                        </div>
+                        <p class="ch2">
+                            Fullstack Developer
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- THE ANIMATED BORDER -->
+        <a href="#ft" class="theborder">
+            <div class="animatedborder anb animeborder">
+                <span class="animatedspan ans"></span>
+            </div>
+        </a>
+    </section>
+<!-- THE SECOND WRAPPER ENDS HERE -->
+
+
+    <!-- THIS IS THE SECOND WAVE HERE IT BEGINS -->
+    <div class="thesvgparent">
+        <div class="custom-shape-divider-bottom-1651923262">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
+            </svg>
+        </div>
+    </div>
+    <!-- /THIS IS THE SECOND WAVE HERE IT ENDS -->
+
+    <!-- THE FOOTER WRAPPER OR THE LAST WRAPPER BEGINS HERE -->
+    <section class="lastwrapper" id="ft">
+
+        <div class="myservicesheaders">
+            <h3 class="static-txt">get in touch</h3>
+            <h3 class="aboutme lastAbout">contact me</h3>
+        </div>
+
+        <!-- THE FOOTER -->
+
+        <footer class="theFooter">
+
+            <!-- THE CONTACT BOX AND FORM WRAPPER -->
+
+            <div class="contactForm">
+
+                <!-- THE FORM -->
+
+                <form id="contactform" action="https://formsubmit.io/send/lyon4197@gmail.com" method="POST"
+                    class="formflex">
+                    <!-- <h3 class="aboutme lastAbout drop">Drop me a message</h3> -->
+                    <div class="projects">
+
+                        <div class="inputBox">
+                            <input type="email" required="required">
+                            <span>Your Email</span>
+                        </div>
+
+                        <div class="inputBox">
+                            <input type="text" required="required">
+                            <span>Your message</span>
+                        </div>
+                    </div>
+
+                    <div class="button">
+                        <button class="btn lastbtn" type="submit">
+                            <a href="./about.html" class="readmore lastreadmore">send message</a>
+                        </button>
+                    </div>
+                </form>
+
+                <!-- THE CONTACT BOX -->
+                <div class="contact_box">
+                    <div class="bchild"><span class="fa-solid fa-location-dot lasti last"></span>
+                        <p>Plot 51 Agu-Awka(Think Home Private Estate), Awka, Anambra.</p>
+                    </div>
+                    <div class="bchild"><span class="fa-solid fa-phone lasti"></span>
+                        <p>+234-902-239-8734</p>
+                    </div>
+                    <div class="bchild"><span class="fa-solid fa-mail-bulk lasti"></span>
+                        <p>lyon4197@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </section>
+    <!-- ENDS -->
+    <!-- /THE FOOTER WRAPPER OR THE LAST WRAPPER ENDS HERE -->
 </body>
 
 </html>
