--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
             <ul class="nav_links">
                 <li class="nav-list"><a href="#" class="active_navigations">home</a></li>
-                <li class="nav-list"><a href="#" class="site_navigations">about</a></li>
+                <li class="nav-list"><a href="./aboutme.html" class="site_navigations">about</a></li>
                 <li class="nav-list"><a href="#" class="site_navigations">Services</a></li>
-                <li class="nav-list"><a href="./contact.html" class="site_navigations">Contact</a></li>
+                <li class="nav-list"><a href="#ft" class="site_navigations">Contact</a></li>
             </ul>
 
             <!-- MY SOCIAL HANDLES -->
@@ -153,7 +153,7 @@
                     <!-- JUST ME -->
 
                     <div class="justme para">
-                        <p>Hi i'm Somtochukwu Nnaji, a passionate fullstack Developer based in Awka, Nigeria. <span
+                        <p>Hi i'm Somtochukwu Nnaji, a passionate Fullstack Developer based in Awka, Nigeria. <span
                                 class="tbdnone">Welcome to
                                 my
                                 portfolio. I am certainly that which you seek.</span></p>
@@ -195,7 +195,6 @@
             </svg>
         </div>
     </div>
-
     <!--/ THIS IS THE WAVE HERE IT ENDS HERE-->
 
     <!-- THE SECOND WRAPPER BEGINS HERE -->
@@ -651,7 +650,7 @@
 
                     <div class="button">
                         <button class="btn lastbtn" type="submit">
-                            <a href="./about.html" class="readmore lastreadmore">send</a>
+                            <a href="./about.html" class="readmore lastreadmore">send message</a>
                         </button>
                     </div>
                 </form>
