I am still working on it.

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOMTOCHUKWU | PORTFOLIO</title>
+    <title>SOMTOCHUKWU | ABOUT ME</title>
     <link rel="icon" href="./assets/images/letter-s-.png">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/fonts/fontawesome/css/all.css">
@@ -34,7 +34,7 @@
             <ul class="nav_links">
                 <li class="nav-list"><a href="./index.html" class="site_navigations">home</a></li>
                 <li class="nav-list"><a href="#" class="active_navigations">about</a></li>
-                <li class="nav-list"><a href="#" class="site_navigations">Services</a></li>
+                <li class="nav-list"><a href="./services.html" class="site_navigations">Services</a></li>
                 <li class="nav-list"><a href="#ft" class="site_navigations">Contact</a></li>
             </ul>
 
@@ -77,7 +77,7 @@
                         <ul class="slide_links">
                             <li class="list"><a href="./index.html" class="slide_navigations">home</a></li>
                             <li class="list"><a href="#" class="slide_active_navigations">about</a></li>
-                            <li class="list"><a href="#" class="slide_navigations">Services</a></li>
+                            <li class="list"><a href="./services.html" class="slide_navigations">Services</a></li>
                             <li class="list"><a href="./contact.html" class="slide_navigations">Contact</a></li>
                         </ul>
 
@@ -139,24 +139,36 @@
                         <!-- STATIC TEXT -->
 
                         <h1 class="static-txt">
-                            get to know me
+                            let me introduce myself
                         </h1>
 
                         <!-- DYNAMIC TEXT -->
 
                         <ul class="dynamic-txt">
-                            <li class="dynamic-li dli"><span class="dynamic-span">fullstack <span
-                                        class="dev">developer</span></span></li>
+                            <li class="dynamic-li dli"><span class="dynamic-span">about <span
+                                        class="dev">me</span></span></li>
                         </ul>
                     </div>
 
                     <!-- JUST ME -->
 
                     <div class="justme para">
-                        <p>Hi i'm Somtochukwu Nnaji, a passionate Fullstack Developer based in Awka, Nigeria. <span
-                                class="tbdnone">Welcome to
-                                my
-                                portfolio. I am certainly that which you seek.</span></p>
+                        <p>
+                            <span class="none"> Hi i'm Somtochukwu Nnaji, a passionate fullstack Developer based in
+                                Awka,
+                                Nigeria.
+                            </span>
+                            I am a
+                            talented, ambitious and hardworking individual, with broad skills
+                        </p>
+
+                        <p class="quote none">
+                            "There is a great satisfaction in building good tools for other people to use."
+                            <span class="quote" >
+                                ― freeman dyson.
+                            </span>
+                        </p>
+
                     </div>
 
 
