--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ul class="nav_links">
                 <li class="nav-list"><a href="#" class="active_navigations">home</a></li>
                 <li class="nav-list"><a href="./aboutme.html" class="site_navigations">about</a></li>
-                <li class="nav-list"><a href="#" class="site_navigations">Services</a></li>
+                <li class="nav-list"><a href="./services.html" class="site_navigations">Services</a></li>
                 <li class="nav-list"><a href="#ft" class="site_navigations">Contact</a></li>
             </ul>
 
@@ -76,8 +76,8 @@
 
                         <ul class="slide_links">
                             <li class="list"><a href="#" class="slide_active_navigations">home</a></li>
-                            <li class="list"><a href="#" class="slide_navigations">about</a></li>
-                            <li class="list"><a href="#" class="slide_navigations">Services</a></li>
+                            <li class="list"><a href="./aboutme.html" class="slide_navigations">about</a></li>
+                            <li class="list"><a href="./services.html" class="slide_navigations">Services</a></li>
                             <li class="list"><a href="./contact.html" class="slide_navigations">Contact</a></li>
                         </ul>
 
@@ -257,7 +257,7 @@
 
                 <div class="button">
                     <button class="btn">
-                        <a href="./about.html" class="readmore">read more</a>
+                        <a href="./aboutme.html" class="readmore">read more</a>
                     </button>
                 </div>
             </div>
@@ -293,20 +293,21 @@
 
                     <div class="pnh">
                         <p class="para">100 projects</p>
-                        <h4 class="head">frontend</h4>
+                        <h4 class="head">Development</h4>
                     </div>
 
                     <!-- THE PARAGRAPH HERE -->
 
                     <p class="sp">
-                        Creates project plan, Responsiveness, User Testing and User Friendly Interface.
+                        Using the best and latest Core programming languages of the web, I can bring the design to live
+                        allowing the usability and interactivity of the project.
                     </p>
 
                     <!-- THE READ MORE BUTTON -->
 
                     <div class="button">
                         <button class="btn">
-                            <a href="./about.html" class="readmore">read more</a>
+                            <a href="./services.html" class="readmore">read more</a>
                         </button>
                     </div>
                 </div>
@@ -319,19 +320,20 @@
 
                     <div class="pnh">
                         <p class="para">30 projects</p>
-                        <h4 class="head">ui/ux design</h4>
+                        <h4 class="head">uI/uX design</h4>
                     </div>
 
                     <!-- THE PARAGRAPH HERE-- -->
                     <p class="sp">
-                        Creates project plan, Responsiveness, User Testing and User Friendly Interface.
+                        I apply critical analytical thinking to deliver intuitive solutions to users through design,
+                        that in turn offer better experience with the project.
                     </p>
 
                     <!-- THE READ MORE BUTTON -->
 
                     <div class="button">
                         <button class="btn">
-                            <a href="./about.html" class="readmore">read more</a>
+                            <a href="./services.html" class="readmore">read more</a>
                         </button>
                     </div>
                 </div>
@@ -344,17 +346,16 @@
 
                     <div class="pnh">
                         <p class="pgra">80 projects</p>
-                        <h4 class="head">backend</h4>
+                        <h4 class="head"> Graphic design</h4>
                     </div>
                     <p class="sp">
-                        Creates project plan, Responsiveness, User Testing and User Friendly Interface.
-                    </p>
+                          I use designs to meet users' specific needs and focus on the logic of displaying elements in interactive designs, to optimize the user experience. 
 
                     <!-- THE READ MORE BUTTON -->
 
                     <div class="button">
                         <button class="btn">
-                            <a href="./about.html" class="readmore">read more</a>
+                            <a href="./services.html" class="readmore">read more</a>
                         </button>
                     </div>
 
